<feature> : <profile url 저장 변경, get요청 사용>
* 프로필 URL 저장 시, 경로를 전부 다 받는 부분을 파일 이름만 받도록 함.
* 프로필 요청 시 파일이름을 통한 get 요청을 통해서 받도록 함.

Resolves: #36
See also: #issueNo

--- a/.gitignore
+++ b/.gitignore
@@ -18,11 +18,11 @@ bin/
 !**/src/test/**/bin/
 
 ### IntelliJ IDEA ###
-application.yml
-application-dev.yml
-application-dev-jpa.yml
-application-prod-db.yml
-application-prod-jpa.yml
+src/main/resources/application.yml
+src/main/resources/application-dev.yml
+src/main/resources/application-dev-jpa.yml
+src/main/resources/application-prod-db.yml
+src/main/resources/application-prod-jpa.yml
 
 .idea
 *.iws
